[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/textures/Window/module-switch/windowbutton_switch_slider.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/Window/module-switch/windowbuttonswitchhangup.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/Window/module-switch/Slider_Node.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/Window/windowclear.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/16/GOTHICB16.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/textures/Window/module-switch/windowbuttonswitchhangupblank.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/window_switch_graphic_portrait_male.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/window_switch_graphic_portrait_female.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/24/GOTHICB-24.tres" type="DynamicFont" id=9]
[ext_resource path="res://src/scripts/modules/ModuleCommunication.gd" type="Script" id=10]













[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="SwitchMiniGame" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
PersonalFemales = "Mum
Beatrice"
PersonalMales = "Dodgey Dave
Corner Shop Tim"
WorkFemales = "The President
The Prime Minister"
WorkMales = "Secretary of State Lionel
The Janitor"

[node name="Window" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -363.0
margin_top = -272.5
margin_right = 365.0
margin_bottom = 270.5
rect_pivot_offset = Vector2( 364, 271 )
texture = ExtResource( 4 )
region_rect = Rect2( 0.0443115, 0, 1091.96, 816 )
patch_margin_left = 73
patch_margin_top = 71
patch_margin_right = 71
patch_margin_bottom = 45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Window"]
margin_left = 2.35968
margin_top = 0.707916
margin_right = 128.36
margin_bottom = 21.7079
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Communication"

[node name="SlideBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.5
margin_top = 138.5
margin_right = 182.5
margin_bottom = 209.5
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 182, 35 )
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderPickup" type="TextureButton" parent="SlideBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.5
margin_top = -35.5
margin_right = -77.5
margin_bottom = 35.5
rect_pivot_offset = Vector2( 52, 35 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlideBackground"]
anims/Fade = SubResource( 1 )

[node name="ButtonHangUp" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.5
margin_top = 180.5
margin_right = 181.5
margin_bottom = 251.5
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 181, 35 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatars" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FemalePortrait" type="TextureRect" parent="Avatars"]
visible = false
margin_left = 484.0
margin_top = 147.5
margin_right = 796.0
margin_bottom = 460.5
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MalePortrait" type="TextureRect" parent="Avatars"]
visible = false
margin_left = 483.56
margin_top = 147.838
margin_right = 795.56
margin_bottom = 460.838
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContactName" type="Label" parent="Avatars"]
margin_left = 484.0
margin_top = 466.0
margin_right = 797.0
margin_bottom = 497.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.258824, 0.898039, 0.831373, 1 )
text = "Secretary of State Lionel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="SlideBackground/SliderPickup" to="." method="_on_SliderPickup_button_down"]
[connection signal="button_up" from="SlideBackground/SliderPickup" to="." method="_on_SliderPickup_button_up"]
[connection signal="animation_finished" from="SlideBackground/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="ButtonHangUp" to="." method="_on_ButtonHangUp_pressed"]
